--- a/public/index.html
+++ b/public/index.html
@@ -1214,21 +1214,21 @@ document.addEventListener('DOMContentLoaded', function(){
     return true;
   };
 
-  // 이미 연결된 저장/인쇄 핸들러가 있더라도 검증만 선행하도록 보강
-  function hook(btn){
-    if (!btn || btn.__smartelGuarded) return;
-    var handler = function(ev){
-      // 검증 실패 시 이후 모든 기본 동작 중단
-      if (!window.__smartelValidate()){
-        ev && ev.preventDefault && ev.preventDefault();
-        ev && ev.stopImmediatePropagation && ev.stopImmediatePropagation();
-        return false;
-      }
-      // 통과 시 기존 리스너(저장/열기/인쇄)는 그대로 실행
-    };
-    btn.addEventListener('click', handler, true); // 캡처 단계에서 먼저 개입
-    btn.__smartelGuarded = true;
-  }
+ function hook(btn){
+  if (!btn || btn.__smartelGuarded) return;
+  var handler = function(ev){
+    // ★ 추가: 검증 전에 상태 동기화
+    try { window.updateCardFields && window.updateCardFields(); } catch(_){}
+
+    if (!window.__smartelValidate()){
+      ev.preventDefault && ev.preventDefault();
+      ev.stopImmediatePropagation && ev.stopImmediatePropagation();
+      return false;
+    }
+  };
+  btn.addEventListener('click', handler, true); // 캡처 단계
+  btn.__smartelGuarded = true;
+}
 
   // 저장/인쇄 버튼 찾아 검증 가드만 입히기
   var saveBtn  = document.getElementById('savePdfBtn') ||
