--- a/public/index.html
+++ b/public/index.html
@@ -351,8 +351,8 @@ header .centered img.logo{ height: 46px !important; }
 <div class="fixbar">
 <div class="wrap">
 <button class="btn outline" data-i18n="reset" id="resetBtn" type="button">초기화</button>
-<button class="btn" data-i18n="save_pdf" id="saveBtn" type="button">PDF 저장</button>
-<button class="btn" data-i18n="print" id="printBtn" type="button">인쇄</button>
+<button class="btn" id="saveBtn"  type="button">PDF 저장</button>
+<button class="btn" id="printBtn" type="button">인쇄</button>
 </div>
 </div>
 
