--- a/public/index.html
+++ b/public/index.html
@@ -1675,6 +1675,105 @@ window.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 <!-- SMARTEL single-bind patch END -->
+<!-- SMARTEL open/save hardening patch START -->
+<script>
+(function(){
+  // 이미 존재하는 generatePDFBlob을 재사용하되,
+  // 비어있는 응답/헤더 누락 등을 보완해서 항상 'application/pdf' Blob으로 리턴
+  async function _ensurePdfBlob(){
+    if (typeof window.generatePDFBlob === 'function') {
+      const anyBlob = await window.generatePDFBlob();
+      // 일부 구현은 Uint8Array나 ArrayBuffer를 반환할 수도 있음 → Blob으로 강제 변환
+      if (anyBlob instanceof Blob) {
+        if (anyBlob.type !== 'application/pdf') {
+          return new Blob([await anyBlob.arrayBuffer()], { type: 'application/pdf' });
+        }
+        return anyBlob;
+      }
+      if (anyBlob && anyBlob.byteLength !== undefined) {
+        return new Blob([anyBlob], { type: 'application/pdf' });
+      }
+      // 방어: fetch Response를 리턴한 경우
+      if (anyBlob && typeof anyBlob.blob === 'function') {
+        const b = await anyBlob.blob();
+        return (b.type === 'application/pdf') ? b : new Blob([await b.arrayBuffer()], { type:'application/pdf' });
+      }
+      throw new Error('Invalid PDF payload');
+    }
+    throw new Error('generatePDFBlob is not defined');
+  }
+
+  // 새 탭 열기 로직 (팝업 차단 시 자동 다운로드 폴백)
+  function openBlobInNewTabOrDownload(blob, filename){
+    if (!blob || !blob.size) throw new Error('Empty PDF blob');
+    const url = URL.createObjectURL(blob);
+    // 1) 새 탭 시도
+    const w = window.open(url, '_blank', 'noopener,noreferrer');
+    // 2) 팝업 차단 시, 강제 다운로드
+    if (!w) {
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = filename || 'smartel.pdf';
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+    }
+    // 3) 메모리 정리
+    setTimeout(()=>URL.revokeObjectURL(url), 60 * 1000);
+  }
+
+  // 안전한 인쇄/저장 핸들러 (기존 onPrintPDF/onSavePDF보다 우선 적용하고, 내부에서 원래 핸들러도 호출 가능)
+  async function safePrintHandler(ev){
+    try {
+      const pdfBlob = await _ensurePdfBlob();
+      openBlobInNewTabOrDownload(pdfBlob, 'smartel.pdf');  // 새 탭 열기 → 차단 시 다운로드
+      // 원래 onPrintPDF가 추가 작업(토스트/로그 등)을 한다면 호출 유지
+      if (window.onPrintPDF && window.onPrintPDF !== safePrintHandler) {
+        try { await window.onPrintPDF(ev); } catch {}
+      }
+    } catch (err) {
+      console.error('[SMARTEL] Print failed:', err);
+      alert('PDF를 열 수 없습니다. 콘솔 로그를 확인해주세요.');
+    }
+  }
+
+  async function safeSaveHandler(ev){
+    try {
+      const pdfBlob = await _ensurePdfBlob();
+      // 저장(다운로드) 고정
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(pdfBlob);
+      a.download = 'smartel.pdf';
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      setTimeout(()=>URL.revokeObjectURL(a.href), 60 * 1000);
+
+      if (window.onSavePDF && window.onSavePDF !== safeSaveHandler) {
+        try { await window.onSavePDF(ev); } catch {}
+      }
+    } catch (err) {
+      console.error('[SMARTEL] Save failed:', err);
+      alert('PDF 저장 중 오류가 발생했습니다. 콘솔 로그를 확인해주세요.');
+    }
+  }
+
+  // 버튼 재바인딩(이 패치는 기존 바인딩을 덮어써서 "열기 실패"만 잡습니다)
+  const saveBtn = document.getElementById('saveBtn');
+  const printBtn = document.getElementById('printBtn');
+  if (saveBtn) {
+    const clone = saveBtn.cloneNode(true);
+    saveBtn.parentNode.replaceChild(clone, saveBtn);
+    clone.addEventListener('click', function(ev){ ev.preventDefault(); safeSaveHandler(ev); });
+  }
+  if (printBtn) {
+    const clone = printBtn.cloneNode(true);
+    printBtn.parentNode.replaceChild(clone, printBtn);
+    clone.addEventListener('click', function(ev){ ev.preventDefault(); safePrintHandler(ev); });
+  }
+})();
+</script>
+<!-- SMARTEL open/save hardening patch END -->
   
 </body>
 </html>
