--- a/public/index.html
+++ b/public/index.html
@@ -1675,31 +1675,42 @@ window.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 <!-- SMARTEL single-bind patch END -->
-<!-- SMARTEL open/save hardening patch START (no-legacy-callback) -->
+<!-- SMARTEL open/save hardening patch v3 (balanced) START -->
 <script>
 (function(){
-  // 기존 핸들러를 완전히 대체하기 위해 버튼을 클론 스왑 + 캡처 단계에서 이벤트 차단
-  function rebind(id, handler){
-    var old = document.getElementById(id);
-    if(!old) return;
-    var btn = old.cloneNode(true);
-    old.parentNode.replaceChild(btn, old);
-    // 클릭 시 기본/전파 모두 차단하여 레거시 리스너가 실행되지 않게 함
-    btn.addEventListener('click', function(ev){
-      ev.preventDefault();
-      ev.stopPropagation();
-      ev.stopImmediatePropagation();
-      handler(ev);
-    }, true); // capture=true
-    return btn;
+  // 0) 이전에 우리가 깔아 둔 전파차단(swallow) 제거 시도
+  try {
+    if (window.__smartel_swallow) {
+      document.removeEventListener('click', window.__smartel_swallow, true);
+      window.__smartel_swallow = null;
+    }
+  } catch(e){}
+
+  // 1) 유틸
+  const log = (...a)=>console.log('[SMARTEL]', ...a);
+  const qs  = (s, r)=> (r||document).querySelector(s);
+  function findBtn(primarySel, textFallbacks){
+    let el = qs(primarySel);
+    if (el) return el;
+    const candidates = Array.from(document.querySelectorAll('button,a,[role="button"]'));
+    const texts = textFallbacks.map(t=>t.toLowerCase());
+    return candidates.find(n=>{
+      const t = (n.innerText||n.textContent||'').trim().toLowerCase();
+      const a = (n.getAttribute('aria-label')||'').toLowerCase();
+      const id= (n.id||'').toLowerCase();
+      const da= (n.getAttribute('data-action')||'').toLowerCase();
+      return texts.some(x => t.includes(x) || a.includes(x) || id.includes(x) || da.includes(x));
+    }) || null;
   }
 
-  // generatePDFBlob을 신뢰 가능한 Blob으로 정규화
-  async function _ensurePdfBlob(){
+  // 2) PDF Blob 정규화
+  async function ensurePdfBlob(){
     if (typeof window.generatePDFBlob !== 'function') {
       throw new Error('generatePDFBlob is not defined');
     }
-    const any = await window.generatePDFBlob(); // 여기는 우리가 앞서 추가한 busy-guard가 감싸고 있음
+    log('calling generatePDFBlob()');
+    const any = await window.generatePDFBlob();  // (busy-guard는 기존 패치가 감쌈)
+    log('generatePDFBlob() returned:', any);
     if (any instanceof Blob) {
       return (any.type === 'application/pdf')
         ? any
@@ -1714,68 +1725,78 @@ window.addEventListener('DOMContentLoaded', () => {
         ? b
         : new Blob([await b.arrayBuffer()], { type:'application/pdf' });
     }
-    throw new Error('Invalid PDF payload');
+    throw new Error('Invalid PDF payload from generatePDFBlob');
   }
 
-  function openBlobInNewTabOrDownload(blob, filename){
+  function openOrDownload(blob, filename){
     if (!blob || !blob.size) throw new Error('Empty PDF blob');
     const url = URL.createObjectURL(blob);
+    log('opening URL:', url);
     const w = window.open(url, '_blank', 'noopener,noreferrer');
-    if (!w) { // 팝업 차단 시 다운로드
+    if (!w) {
+      log('popup blocked → falling back to download');
       const a = document.createElement('a');
-      a.href = url;
-      a.download = filename || 'smartel.pdf';
+      a.href = url; a.download = filename || 'smartel.pdf';
       document.body.appendChild(a); a.click(); a.remove();
     }
     setTimeout(()=>URL.revokeObjectURL(url), 60*1000);
   }
 
-  // 레거시 핸들러를 호출하지 않는 안전 핸들러 (알림도 여기선 띄우지 않음)
-  async function safePrint(ev){
-    try {
-      const blob = await _ensurePdfBlob();
-      openBlobInNewTabOrDownload(blob, 'smartel.pdf');
-    } catch (err) {
-      console.error('[SMARTEL] safePrint failed:', err);
-      // 필요시 여기서만 알림 표시: alert('PDF를 열 수 없습니다. 콘솔 로그를 확인해주세요.');
+  async function handlePrint(ev){
+    try{
+      ev && ev.preventDefault();
+      const blob = await ensurePdfBlob();
+      openOrDownload(blob, 'smartel.pdf');
+    }catch(err){
+      console.error('[SMARTEL] print failed:', err);
+      alert('PDF를 열 수 없습니다. 콘솔 로그를 확인해주세요.');
     }
   }
-  async function safeSave(ev){
-    try {
-      const blob = await _ensurePdfBlob();
+  async function handleSave(ev){
+    try{
+      ev && ev.preventDefault();
+      const blob = await ensurePdfBlob();
       const a = document.createElement('a');
       a.href = URL.createObjectURL(blob);
       a.download = 'smartel.pdf';
       document.body.appendChild(a); a.click(); a.remove();
       setTimeout(()=>URL.revokeObjectURL(a.href), 60*1000);
-    } catch (err) {
-      console.error('[SMARTEL] safeSave failed:', err);
-      // 필요시 알림 표시 가능
+    }catch(err){
+      console.error('[SMARTEL] save failed:', err);
+      alert('PDF 저장 중 오류가 발생했습니다. 콘솔 로그를 확인해주세요.');
     }
   }
 
-  // 레거시 전파를 추가적으로 차단하기 위해 문서 레벨에서 버튼 클릭을 캡처 단계로 막음(선택)
-  function swallow(e){
-    const t = e.target;
-    if (!t) return;
-    const id = t.id || '';
-    if (id === 'saveBtn' || id === 'printBtn') {
-      e.stopPropagation();
-      e.stopImmediatePropagation();
-    }
+  // 3) 버튼 탐지 & 바인딩 (기존 노드 유지, 전파 차단 X)
+  const printBtn = findBtn('#printBtn', ['인쇄','print']);
+  const saveBtn  = findBtn('#saveBtn',  ['저장','save','download']);
+
+  if (printBtn) {
+    // mousedown도 잡아서 어떤 프레임워크의 선행 처리보다 먼저 실행되게 보강
+    printBtn.addEventListener('mousedown', e=>{ /* no-op: 자리잡기 */ }, {passive:true});
+    printBtn.addEventListener('click', handlePrint);
+    log('print button bound:', printBtn);
+  } else {
+    log('print button not found');
   }
-  document.addEventListener('click', swallow, true);
 
-  // 버튼 재바인딩(레거시 콜백 호출 안 함)
-  rebind('saveBtn',  safeSave);
-  rebind('printBtn', safePrint);
+  if (saveBtn) {
+    saveBtn.addEventListener('mousedown', e=>{}, {passive:true});
+    saveBtn.addEventListener('click', handleSave);
+    log('save button bound:', saveBtn);
+  } else {
+    log('save button not found');
+  }
 
-  // 혹시 코드 어딘가에서 직접 window.onPrintPDF/Save를 호출한다면, 아예 대체해 둠
-  window.onPrintPDF = safePrint;
-  window.onSavePDF  = safeSave;
+  // 4) 키보드 단축키(응급용): Alt+P = 프린트, Alt+S = 저장
+  document.addEventListener('keydown', function(e){
+    if (e.altKey && (e.key==='p' || e.key==='P')) { e.preventDefault(); handlePrint(); }
+    if (e.altKey && (e.key==='s' || e.key==='S')) { e.preventDefault(); handleSave(); }
+  });
 })();
 </script>
-<!-- SMARTEL open/save hardening patch END (no-legacy-callback) -->
+<!-- SMARTEL open/save hardening patch v3 (balanced) END -->
+
   
 </body>
 </html>
